--- a/group1_a2.Rmd
+++ b/group1_a2.Rmd
@@ -14,6 +14,7 @@ output: html_document
 
 # a machine learning classifier will help us decide 
 # if we will get high or if we will die
+# a leave node shows if its red or blue
 ```
 
 # Simple model
