--- a/group1_a2.Rmd
+++ b/group1_a2.Rmd
@@ -14,6 +14,12 @@ output: html_document
 
 # a machine learning classifier will help us decide 
 # if we will get high or if we will die
+
+
+# the red ones look nice 
+# the blue ones look bad
+# if but if i pick red and its poisonous
+# i will be sad
 ```
 
 # Simple model
