--- a/group1_a2.Rmd
+++ b/group1_a2.Rmd
@@ -6,6 +6,13 @@ output: html_document
 ---
 
 # Data
+```{r}
+mushrooms <- read.csv("mushrooms.csv")
+```
+
+```{r}
+mushrooms
+```
 
 ```{r}
 # a bad poem:  
@@ -21,11 +28,11 @@ output: html_document
 # liz truss was defeated by the salad
 
 # a leave node shows if its red or blue
+
 # the red ones look nice 
 # the blue ones look bad
 # if but if i pick red and its poisonous
 # i will be sad
-
 ```
 
 # Simple model
