--- a/group1_a2.Rmd
+++ b/group1_a2.Rmd
@@ -5,6 +5,16 @@ date: '2022-10-21'
 output: html_document
 ---
 
+```{r}
+library(readr)
+library(tidyverse)
+library(psych)
+library(MASS)
+library(pROC)
+library(randomForest)
+library(xgboost)
+```
+
 # Data
 
 ```{r}
@@ -51,5 +61,79 @@ print("Hello world")
 # if no parameters: interpret contribution of features
 # make conclusions about predictions
 # use plots
+```
+
+
+
+# Florian
+```{r}
+# Load data
+mushrooms <- read_csv("~/Documents/GitHub/Getting-High-or-Die/mushrooms.csv")
+
+# check the data
+View(mushrooms)
+str(mushrooms)
+
+# Tidy the data
+mushrooms_tidy <- mushrooms %>%
+  mutate(across(where(is.character),as_factor)) %>% 
+  select(-`veil-type`)# there is only one cat 
+
+# change the - to _ else the random forest will trip
+names(mushrooms_tidy) <- gsub(x = names(mushrooms_tidy), pattern = "-", replacement = "_") 
+
+# look at the data
+describe(mushrooms_tidy)
+
+# Simple model 2
+M1a <- glm(class ~ ., data = mushrooms_tidy, family = "binomial")
+summary(M1a)
+
+pred_prob <- predict(M1a,type = "response")
+pred_lr   <- factor(pred_prob > .5)
+table(true = mushrooms_tidy$class, predicted = pred_lr)
+
+roc_lr1 <- roc(mushrooms_tidy$class, pred_prob)
+ggroc(roc_lr1) + theme_minimal() + labs(title = "LR1")
+
+# Remove the NA's
+M1b <- glm(class ~ . -`stalk-color-above-ring` -`stalk-color-below-ring` - `stalk-color-below-ring` - `stalk-color-below-ring` - `ring-type` - `ring-number`, data = mushrooms_tidy, family = "binomial")
+summary(M1b)
+
+# Simple model 2
+M2a <- lda(class ~ ., data = mushrooms_tidy)
+pred_lda <- predict(M2a)
+table(true = mushrooms_tidy$class, predicted = predict(M2a)$class)
+
+# Improved model 1
+M3a <- rpart(class ~ ., data = mushrooms_tidy)
+rpart.plot(M3a)
+
+# Improved model 2
+M3b <- rpart(class ~ ., data = mushrooms_tidy, control = rpart.control(minbucket = 1, cp = 0)) 
+rpart.plot(M3b)
+
+# Improved model 3
+M3c <- randomForest(class ~ ., data = mushrooms_tidy)
+M3c
+
+# SPLIT THE DATA
+
+#make this example reproducible
+set.seed(0)
+
+mushrooms_tidy_split <- 
+  mushrooms_tidy %>% 
+  mutate(split = sample(rep(c("train", "test"), times = c(6000, 2124))))
+
+mushrooms_train <- 
+  mushrooms_tidy_split %>% 
+  filter(split == "train") #%>% 
+  #select(-split)
+
+mushrooms_test <- 
+  mushrooms_tidy_split %>% 
+  filter(split == "test") #%>% 
+  #select(-split)
 ```
 
