--- a/judith_trees.Rmd
+++ b/judith_trees.Rmd
@@ -232,3 +232,31 @@ model.evaluations <- rbind(
 model.evaluations
 ```
 
+# Calibration stuff
+
+```{r}
+# calibration plots 
+dt_prob <- predict(beginner_tree, newdata = beginner_test)
+xgb_prob<- predict(xgboost_train, newdata = model.matrix(class ~ ., beginner_test)[,-1])
+rf_prob <- predict(beginner_rf, newdata = beginner_test, type = "prob")
+
+probs <- tibble(
+  class = beginner_test$class, 
+  dt    = dt_prob[,2], 
+  rf    = rf_prob[,2],
+  xg    = xgb_prob, 
+) %>% 
+  mutate(class = ifelse(class == "e", 1, 0))
+
+probs %>%
+  gather(key = "variable", value = "value", -class) %>% 
+  ggplot(aes(x = value, y = class, color = variable)) + 
+  geom_abline(slope = 1, intercept = 0) +
+  geom_smooth(method = stats::loess, se = FALSE) +
+  scale_x_continuous(breaks = seq(0, 1, 0.1)) +
+  scale_y_continuous(breaks = seq(0, 1, 0.1)) +
+  xlab("Estimated Probability") +
+  ylab("Observed Proportion") +
+  ggtitle("Logistic Regression Calibration Plot Training")
+```
+
