--- a/Clean_document.Rmd
+++ b/Clean_document.Rmd
@@ -209,15 +209,131 @@ advanced_train <- mushrooms_train
 advanced_test  <- mushrooms_test
 ```
 
+## Logistic regression
+
+### Formulas
+
 ```{r}
-# clean up environment
-rm(data, mushrooms, mushrooms_split, mushrooms_test, mushrooms_train, advanced, beginner, n)
+generate_formulas <- function(p, x_vars, y_var) {
+  x_vars <- colnames(x_vars)
+  # Input checking
+  if (p %% 1 != 0)           stop("Input an integer n")
+  if (p > length(x_vars))    stop("p should be smaller than number of vars")
+  if (!is.character(x_vars)) stop("x_vars should be a character vector")
+  if (!is.character(y_var))  stop("y_vars should be character type")
+  
+  # combn generates all combinations, apply turns them into formula strings
+  apply(combn(x_vars, p), 2, function(vars) {
+    paste0(y_var, " ~ ", paste(vars, collapse = " + "))
+  })
+}
+```
+
+```{r}
+find_best_predictors <- function(formulas,train,valid, valid_y){
+  
+  out <-data.frame(matrix(nrow = length(formulas), ncol = 2))
+  thres <- data.frame(seq(0.05,0.95,length.out=19))
+  alpha <- seq(0.05,0.95,length.out=19)
+
+  for(i in 1:length(formulas)){
+    model <- glm(formulas[i], family=binomial, data=train)
+    pred_prob <- predict(model, type = "response", newdata = valid)
+    
+    comb <- data.frame(matrix(nrow = nrow(thres), ncol = 3))
+    comb$alpha <- alpha
+    colnames(comb) <- c("TPR", "TNR","mean","alpha")
+      
+    for(j in 1:nrow(thres)){
+      pred_lr <- c()
+      pred_lr <- case_when(pred_prob > as.numeric(thres[j,1]) ~ "Yes", pred_prob <= as.numeric(thres[j,1]) ~ "No")
+      cmat_lr <- table(true = valid_y, predicted = pred_lr)
+      if(sum(pred_lr == "Yes" ) == nrow(beginner_test)){
+        TN <- cmat_lr[1, 1]
+        FN <- cmat_lr[2, 1]
+        FP <- 0
+        TP <- 0
+      }
+      else if(sum(pred_lr == "No" ) == nrow(beginner_test)){
+        TN <- 0
+        FN <- 0
+        FP <- cmat_lr[1, 1]
+        TP <- cmat_lr[2, 1]
+      }      else{
+        TN <- cmat_lr[1, 1]
+        FN <- cmat_lr[2, 1]
+        FP <- cmat_lr[1, 2]
+        TP <- cmat_lr[2, 2]
+      }
+      comb[j,1] <- TP / (TP + FN)
+      comb[j,2] <- TN / (TN + FP)
+      comb[j,3] <- (comb[j,1]*1.2+comb[j,2])/2
+      }
+    comb <- comb[order(comb$mean, decreasing=T),]
+    
+    out[i,1] <- comb[1,3]
+    out[i,2] <- formulas[i]
+    
+    }
+  colnames(out) <- c("meanTPR_TNR", "formula")
+  out <- out[order(out$meanTPR_TNR,decreasing = T),]
+  
+return(best=out[1:3, ])
+}
+```
+
+```{r}
+# alternative
+best_model <- function(formulas,train,valid, valid_y){
+  out <-data.frame(matrix(nrow = length(formulas), ncol = 2))
+  
+  for(i in 1:length(formulas)){
+    model <- glm(formulas[i], family=binomial, data=train)
+    pred_prob <- predict(model, type = "response", newdata = valid)
+    roc_lr1 <- roc(valid_y, pred_prob)
+    out[i,1] <- roc_lr1$auc[1]
+    out[i,2] <- formulas[i]
+    }
+  colnames(out) <- c("auc", "formula")
+  out <- out[order(out$auc,decreasing = T),]
+  
+return(best=out[1:3, ])
+}
+```
+
+```{r}
+mushrooms_begin_x <- beginner %>%
+  dplyr::select(-class)
+```
+
+```{r}
+set.seed(14)
+```
+
+```{r}
+formulas_2 <- generate_formulas(p=2,x_vars=mushrooms_begin_x, y_var="class")
+formulas_3 <- generate_formulas(p=3,x_vars=mushrooms_begin_x, y_var="class")
+formulas_4 <- generate_formulas(p=4,x_vars=mushrooms_begin_x, y_var="class")
+formulas_5 <- generate_formulas(p=5,x_vars=mushrooms_begin_x, y_var="class")
+formulas_6 <- generate_formulas(p=6,x_vars=mushrooms_begin_x, y_var="class")
+```
+
+```{r}
+pred2 <- find_best_predictors(formulas=formulas_2,train=beginner_train,valid=beginner_test,valid_y=beginner_test$class)
+pred3 <- find_best_predictors(formulas=formulas_3,train=beginner_train,valid=beginner_test,valid_y=beginner_test$class)
+pred4 <- find_best_predictors(formulas=formulas_4,train=beginner_train,valid=beginner_test,valid_y=beginner_test$class)
+pred5 <- find_best_predictors(formulas=formulas_5,train=beginner_train,valid=beginner_test,valid_y=beginner_test$class)
+pred6 <- find_best_predictors(formulas=formulas_6,train=beginner_train,valid=beginner_test,valid_y=beginner_test$class)
+
 ```
 
 
-## Logistic regression
-```{r}
-
+```{r, echo=FALSE}
+pred2_b <- best_model(formulas=formulas_2,train=beginner_train,valid=beginner_test,valid_y=beginner_test$class)
+pred3_b <- best_model(formulas=formulas_3,train=beginner_train,valid=beginner_test,valid_y=beginner_test$class)
+pred4_b <- best_model(formulas=formulas_4,train=beginner_train,valid=beginner_test,valid_y=beginner_test$class)
+pred5_b <- best_model(formulas=formulas_5,train=beginner_train,valid=beginner_test,valid_y=beginner_test$class)
+pred6_b <- best_model(formulas=formulas_6,train=beginner_train,valid=beginner_test,valid_y=beginner_test$class)
 ```
 
 ## Trees
