--- a/Clean_document.Rmd
+++ b/Clean_document.Rmd
@@ -248,13 +248,13 @@ find_best_predictors <- function(formulas,train,valid, valid_y){
       pred_lr <- c()
       pred_lr <- case_when(pred_prob > as.numeric(thres[j,1]) ~ "Yes", pred_prob <= as.numeric(thres[j,1]) ~ "No")
       cmat_lr <- table(true = valid_y, predicted = pred_lr)
-      if(sum(pred_lr == "Yes" ) == nrow(beginner_test)){
+      if(sum(pred_lr == "Yes" ) == length(valid_y)){
         TN <- cmat_lr[1, 1]
         FN <- cmat_lr[2, 1]
         FP <- 0
         TP <- 0
       }
-      else if(sum(pred_lr == "No" ) == nrow(beginner_test)){
+      else if(sum(pred_lr == "No" ) == length(valid_y)){
         TN <- 0
         FN <- 0
         FP <- cmat_lr[1, 1]
@@ -336,10 +336,93 @@ pred5_b <- best_model(formulas=formulas_5,train=beginner_train,valid=beginner_te
 pred6_b <- best_model(formulas=formulas_6,train=beginner_train,valid=beginner_test,valid_y=beginner_test$class)
 ```
 
-## Trees
+## cross validation
 
 ```{r}
+find_best_predictors2 <- function(formulas,train,valid, valid_y){
+  
+  out <-data.frame(matrix(nrow = length(formulas), ncol = 2))
+  thres <- data.frame(seq(0.05,0.95,length.out=19))
+  alpha <- seq(0.05,0.95,length.out=19)
 
+  for(i in 1:length(formulas)){
+    model <- glm(formulas[i], family=binomial, data=train)
+    pred_prob <- predict(model, type = "response", newdata = valid)
+    
+    comb <- data.frame(matrix(nrow = nrow(thres), ncol = 3))
+    comb$alpha <- alpha
+    colnames(comb) <- c("TPR", "TNR","mean","alpha")
+      
+    for(j in 1:nrow(thres)){
+      pred_lr <- c()
+      pred_lr <- case_when(pred_prob > as.numeric(thres[j,1]) ~ "Yes", pred_prob <= as.numeric(thres[j,1]) ~ "No")
+      cmat_lr <- table(true = valid_y, predicted = pred_lr)
+      if(sum(pred_lr == "Yes" ) == length(valid_y)){
+        TN <- cmat_lr[1, 1]
+        FN <- cmat_lr[2, 1]
+        FP <- 0
+        TP <- 0
+      }
+      else if(sum(pred_lr == "No" ) == length(valid_y)){
+        TN <- 0
+        FN <- 0
+        FP <- cmat_lr[1, 1]
+        TP <- cmat_lr[2, 1]
+      }      else{
+        TN <- cmat_lr[1, 1]
+        FN <- cmat_lr[2, 1]
+        FP <- cmat_lr[1, 2]
+        TP <- cmat_lr[2, 2]
+      }
+      comb[j,1] <- TP / (TP + FN)
+      comb[j,2] <- TN / (TN + FP)
+      comb[j,3] <- (comb[j,1]*1.2+comb[j,2])/2
+      }
+    comb <- comb[order(comb$mean, decreasing=T),]
+    
+    out[i,1] <- comb[1,3]
+    out[i,2] <- formulas[i]
+    
+    }
+  colnames(out) <- c("meanTPR_TNR", "formula")
+  
+return(out)
+}
+```
+
+```{r}
+crossvalidate <- function(k, dataset, form, top){
+  
+  Y <- data.frame(matrix(nrow = length(form), ncol = k))
+  Final <- data.frame(matrix(nrow = length(form), ncol = 2))
+  
+  # first, add a selection column to the dataset as before
+  n_samples  <- nrow(dataset)
+  select_vec <- rep(1:k, length.out = n_samples)
+  data_split <- dataset %>% mutate(folds = sample(select_vec))
+  
+  for (i in 1:k) {
+    # split the data in train and validation set
+    data_train <- data_split %>% filter(folds != i)
+    data_valid <- data_split %>% filter(folds == i)
+    
+    data_valid_y <- data_valid$class
+    
+    X <- find_best_predictors2(formulas=form,train=data_train,valid=data_valid,valid_y=data_valid_y)
+    Y[,i] <- X$meanTPR_TNR
+  }
+  Final[,1]  <- X[[2]]
+  Final[,2] <- rowMeans(Y)
+  Final <- Final[order(Final[2],decreasing = T),]
+  
+  colnames(Final) <- c("Formula", "Crosval mean of TPR_TNR")
+  return(Final[1:top,])
+}
+
+```
+
+```{r}
+crossvalidate(5, beginner, formulas_2, 5)
 ```
 
 
