--- a/Group1_Assignment2_report.Rmd
+++ b/Group1_Assignment2_report.Rmd
@@ -409,7 +409,6 @@ return(out)
 }
 ```
 
-
 #### Cross-validating the choice of predictors
 ```{r}
 cv_best_pred <- function(k, dataset, form, top){
@@ -532,11 +531,11 @@ pred6 <- cv_best_pred(5, beginner_train, formulas_6, 5)
 
 ```{r}
 # comparing the results 
-mean(pred2[,2])
-mean(pred3[,2])
-mean(pred4[,2])
-mean(pred5[,2])
-mean(pred6[,2])
+pred2
+pred3
+pred4
+pred5
+pred6
 # not a huge improvement between 3, 4, and 5
 # All of these models would yield good results
 ```
@@ -544,24 +543,19 @@ mean(pred6[,2])
 ```{r}
 # comparison between models
 cv_best_models(5, beginner_train, pred4[1,1], pred4[1,3], 123)
-cv_best_models(5, beginner_train, pred5[1,1], pred5[1,3], 124)
-cv_best_models(5, beginner_train, pred6[1,1], pred6[1,3], 125)
+cv_best_models(5, beginner_train, pred5[1,1], pred5[1,3], 123) # this seems to be the best model
+cv_best_models(5, beginner_train, pred6[1,1], pred6[1,3], 123)
 ```
 
-```{r}
-# comparison within models
-cv_best_models(5, beginner_train, pred5[1,1], pred5[1,3], 123) # sticking with this model 
-cv_best_models(5, beginner_train, pred5[2,1], pred5[2,3], 124)
-cv_best_models(5, beginner_train, pred5[3,1], pred5[3,3], 125)
-```
 
 ```{r}
 # assessing test set predictions
 test_metric(pred5[1,1], beginner_train, beginner_test,pred5[1,3]) 
-test_metric(pred5[2,1], beginner_train, beginner_test,pred5[2,3])
+```
 
-test_metric(pred6[1,1], beginner_train, beginner_test,pred6[1,3]) # this model performs slightly better in the direction we want as it has less False false negatives, comapred to 5, but also only marginally
-test_metric(pred6[2,1], beginner_train, beginner_test,pred6[2,3])
+```{r}
+# Final formula for the trees
+pred5[1,1]
 ```
 
 ### Trees
@@ -569,7 +563,6 @@ test_metric(pred6[2,1], beginner_train, beginner_test,pred6[2,3])
 something something, what are we doing and why and how are we making it more complex
 
 ```{r}
-
 ```
 
 ## Results
